--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,14 @@
 }
 
 body{
-    background-color: rgb(253, 240, 242);
-    height: 100vh;
+    background-color: hsl(30, 38%, 92%);
+    /* height: 100vh; */
     width: 100vw;
+    font-size: 14px;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container{
@@ -38,27 +43,34 @@ body{
 .perfume{
     font-weight: lighter;
     letter-spacing: 3px;
-    color: grey;
+    color: hsl(228, 12%, 48%);
+    font-family: 'Montserrat';
+    font-weight: 700;
 }
 .name{
-    font-weight: bold;
+    font-weight: 700;
     font-size: 30px;
-    line-height: 25px;
+    line-height: 30px;
+    color: hsl(212, 21%, 14%);
+    font-family: 'Fraunces', sans-serif;
 }
 .desc{
-    color: grey;
+    color: hsl(228, 12%, 48%);
+    font-family: 'Montserrat';
+    font-weight: 500;
 }
 .new-price{
-    color: darkgreen;
+    color: hsl(158, 36%, 37%);
     font-size: 30px;
     font-weight: bold;
 }
 .old-price{
     text-decoration: line-through;
     font-size: 15px;
+    color: hsl(228, 12%, 48%);
 }
 .btn{
-    background-color: rgb(56, 105, 56);
+    background-color: hsl(158, 36%, 37%);
     color: white;
     font-weight: bold;
     height: 10%;
@@ -90,7 +102,7 @@ body{
     }
     .image{
         height: 40vh;
-        background: url('/images/image-product-mobile.jpg') no-repeat;
+        background: url('/Perfume-Card/images/image-product-mobile.jpg') no-repeat;
         background-size: cover;
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
