--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,9 @@
 
 body{
     background-color: hsl(30, 38%, 92%);
-    /* height: 100vh; */
+    height: 100vh;
     width: 100vw;
     font-size: 14px;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .container{
